Closed
Bug 76311
Opened 24 years ago
Closed 24 years ago
Bidi selection code fired on non-Bidi pages
Categories
(SeaMonkey :: General, defect)
SeaMonkey
General
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla0.9
People
(Reporter: smontagu, Assigned: erik)
References
()
Details
Attachments
(1 file)
|
2.20 KB,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; m18) Gecko/20001231
BuildID:
The IBMBIDI code in nsSelection::HandleDrag doesn't check that Bidi is enabled
in the presentation context. This must be fixed to prevent performance hit on
non-Bidi pages.
Reproducible: Always
Steps to Reproduce:
Open mozilla in a debugger.
Set a breakpoint in nsSelection::VisualSelectFrames in
mozilla/content/base/src/nsSelection.cpp
Open any document with no Bidi content
Click and drag the mouse
Actual Results: The breakpoint is reached
Expected Results: This method should never be entered from a non-Bidi document
| Reporter | ||
Comment 1•24 years ago
|
||
Comment 3•24 years ago
|
||
we need a bidi component...
| Assignee | ||
Comment 5•24 years ago
|
||
sr=erik
| Assignee | ||
Comment 6•24 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9
| Assignee | ||
Comment 7•24 years ago
|
||
Simon, thanks for coming up with a fix so quickly!
Comment 8•24 years ago
|
||
I can no longer see the bug on my Mac bidi build after get erik's patch.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•