bug 76311; author=simon@softel.co.il; r=mjudge; sr=erik; This fixes the bug where we were running bidi selection code even on a non-bidi document. It also fixes a problem in the bidi code where we were ignoring the return values of a few calls.